# adit

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  Adit.sln  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.targets  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.claude/agents/: adit-operator.md
.github/workflows/: ci.yml
docs/: api.md  architecture.md  setup-troubleshooting.md
scripts/: build_challenge_holdout.py  build_replay_failure_windows.py  build_thread_model_dataset.py  enable-daemon-debug-identity.ps1  filter_real_eval_labels.py  generate_challenge_windows.py  replay_thread_runtime.py  test_thread_model_pipeline.py  thread_model_banks.py  thread_model_runtime_replay.py  thread_model_synth.py
sdk/claudebot-skill/: README.md  SKILL.md
sdk/js/: README.md  index.js  package.json
sdk/mcp-server/: README.md  package-lock.json  package.json  server.js
sdk/python/: README.md  pyproject.toml
sdk/python/adit/: __init__.py  client.py
sdks/: README.md
src/Adit.Core/: Adit.Core.csproj
src/Adit.Daemon/: Adit.Daemon.csproj  ApiContracts.cs  AssemblyInfo.cs  DaemonCli.cs  Program.cs  appxmanifest.xml
src/Adit.Probe/: Adit.Probe.csproj  AmsUuids.cs  AncsProbe.cs  AncsProtocol.cs  AssemblyInfo.cs  BleActiveExerciser.cs  BleAdvertisementProbe.cs  BleExerciseUuids.cs  ClassicRfcommProbe.cs  DeviceDiscovery.cs  MicrosoftPbapProbe.cs  (+12 more)
tools/: start-packaged-daemon.ps1
training/: README.md  thread_fused_stack.py  thread_scoring_sidecar.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+92 files in other folders)
